To host the git hub page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>This is the GITHUB Assignment</title>
-</head>
+  <title>Page Title</title>
+  <style>
+    body {background-color: gray;}
+    h1 {color: black;}
+    p {color: blue;}
+  </style>
+</head>  
 <body>
 
-We will be learning a lot. 
-Need to know Python and Machine learning as basics.
+<h1>We are loving this course.</h1>
+<p>Need to know Python and Machine Learning as basics.</p>
+  
+<p>Just learning how to host a git hub page</p>
+<p>This is just for the Introduction and a lot is there ahead.</p>
 
 </body>
 </html>
