To host the git hub page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Page Title</title>
   <style>
-    body {background-color: gray;}
+    body {background-color:lawngreen;}
     h1 {color: black;}
-    p {color: blue;}
+    p {color:brown;}
   </style>
 </head>  
 <body>
