We will create pull request

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Page Title</title>
   <style>
-    body {background-color:lawngreen;}
+    body {background-color:palegoldenrod;}
     h1 {color: black;}
     p {color:brown;}
   </style>
